--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
 
            <h2>Bio</h2>
             <!-- <ul> -->
-            Gao Huang is an Assistant Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 15,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
+            Gao Huang is an Assistant Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 25,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
             <!-- </ul> -->
             <br>            <br>
 
@@ -517,10 +517,17 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
      <!-- (<a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Full publication list on Google Scholar</a>) -->
 <BR>
 
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_ICML_evolving_attention.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.04906"><B>
+            Evolving Attention with Residual Convolutions.</B></A>
+                <BR>Yujing Wang*, Yaming Yang*, Jiangang Bai, Mingliang Zhang, Jing Bai, Jing Yu, Ce Zhang, <b>Gao Huang</b>, Yunhai Tong.
+                      <BR><I>International Conference on Machine Learning (<b>ICML</b>) 2021.<br></I>
+        <BR></DIV></DIV>
+
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dynamic_survey.png">                  
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.04906"><B>
-            Dynamic Neural Networks: A Survey.</B></A> 
-                <BR>Yizeng Han*,<b>Gao Huang</b>*, Shiji Song, Le Yang, Honghui Wang, Yulin Wang.               
+            Dynamic Neural Networks: A Survey.</B></A>
+                <BR>Yizeng Han*,<b>Gao Huang</b>*, Shiji Song, Le Yang, Honghui Wang, Yulin Wang.
                       <BR><I>arXiv Preprint, 2021.<br></I>
         <BR></DIV></DIV>
 
@@ -528,16 +535,16 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_cvpr_pointformer.jpg">                  
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2012.11409"><B>
             3D Object Detection with Pointformer.</B></A> 
-            <!-- [<A href="https://github.com/yangle15/RANet-pytorch"    target="_blank">code</A>]                     -->
+             [<A href="https://github.com/Vladimir2506/Pointformer"    target="_blank">code</A>]
                 <BR>Xuran Pan*, Zhuofan Xia*, Shiji Song, Li Erran Li, <b>Gao Huang</b>.               
-                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR </b>) 2021.<br></I>
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2021.<br></I>
         <BR></DIV></DIV>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_cvpr_condensenet_v2.jpg">                  
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2104.04382"><B>CondenseNet V2: Sparse Feature Reactivation for Deep Networks.</B></A> 
             [<A href="https://github.com/jianghaojun/CondenseNetV2"    target="_blank">code</A>]                    
                 <BR>Le Yang*, Haojun Jiang*, Ruojin Cai, Yulin Wang, Shiji Song, <b>Gao Huang</b>, Qi Tian.               
-                        <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR </b>) 2021.<br></I>
+                        <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2021.<br></I>
         <BR></DIV></DIV>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_cvpr_cbn.jpg">                  
@@ -545,7 +552,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
             Cross-iteration Batch Normalization.</B></A> 
             [<A href="https://github.com/Howal/Cross-iterationBatchNorm"    target="_blank">code</A>]                    
                 <BR>Zhuliang Yao, Yue Cao, Shuxin Zheng, <b>Gao Huang</b>, Stephen Lin.               
-                        <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR </b>) 2021.<br></I>
+                        <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2021.<br></I>
         <BR></DIV></DIV>
 
 
