--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 <BR>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_ICML_evolving_attention.png">
-        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.04906"><B>
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2102.12895"><B>
             Evolving Attention with Residual Convolutions.</B></A>
                 <BR>Yujing Wang*, Yaming Yang*, Jiangang Bai, Mingliang Zhang, Jing Bai, Jing Yu, Ce Zhang, <b>Gao Huang</b>, Yunhai Tong.
                       <BR><I>International Conference on Machine Learning (<b>ICML</b>) 2021.<br></I>
