--- a/index.html
+++ b/index.html
@@ -517,6 +517,14 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
      <!-- (<a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Full publication list on Google Scholar</a>) -->
 <BR>
 
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_pami_GDCAN.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2103.12339"><B>Generalized Domain Conditioned Adaptation Network.</B></A>
+            [<A href="https://github.com/BIT-DA/GDCAN"    target="_blank">code</A>]
+                <BR>Shuang Li, Binhui Xie, Qiuxia Lin, Chi Harold Liu, <b>Gao Huang</b>, Guoren Wang.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
+        <BR></DIV></DIV>
+
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_ICML_evolving_attention.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.12895"><B>
             Evolving Attention with Residual Convolutions.</B></A>
@@ -573,19 +581,19 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
                       <BR><I>International Conference on Learning Representations (<b>ICLR</b>) 2021.<br></I>
         <BR></DIV></DIV>
 
-            <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/isda_pami_2021.png">                  
-                <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2007.10538"><B>Regularizing Deep Networks with Semantic Data Augmentation.</B></A> 
-                    [<A href="https://github.com/blackfeather-wang/ISDA-for-Deep-Networks"    target="_blank">code</A>]                    
-                        <BR>Yulin Wang, <b>Gao Huang</b>, Shiji Song, Xuran Pan, Yitong Xia, Cheng Wu.               
-                              <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
-                <BR></DIV></DIV>
-        
-            <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/ssinet_pami_2020.png">                  
-                <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2003.07069"><B>Self-Supervised Discovering of Interpretable Features for Reinforcement Learning.</B></A> 
-                    [<A href="https://github.com/shiwj16/SSINet"    target="_blank">code</A>]                    
-                        <BR>Wenjie Shi, <b>Gao Huang</b>, Shiji Song, Zhuoyuan Wang, Tingyu Lin, Cheng Wu.               
-                              <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2020.<br></I>
-                <BR></DIV></DIV>
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/isda_pami_2021.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2007.10538"><B>Regularizing Deep Networks with Semantic Data Augmentation.</B></A>
+            [<A href="https://github.com/blackfeather-wang/ISDA-for-Deep-Networks"    target="_blank">code</A>]
+                <BR>Yulin Wang, <b>Gao Huang</b>, Shiji Song, Xuran Pan, Yitong Xia, Cheng Wu.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/ssinet_pami_2020.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2003.07069"><B>Self-Supervised Discovering of Interpretable Features for Reinforcement Learning.</B></A>
+            [<A href="https://github.com/shiwj16/SSINet"    target="_blank">code</A>]
+                <BR>Wenjie Shi, <b>Gao Huang</b>, Shiji Song, Zhuoyuan Wang, Tingyu Lin, Cheng Wu.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2020.<br></I>
+        <BR></DIV></DIV>
         
 
 
