--- a/index.html
+++ b/index.html
@@ -516,6 +516,30 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 
      <!-- (<a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Full publication list on Google Scholar</a>) -->
 <BR>
+    <!---->
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dvt.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2105.15075"><B>
+            Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length.</B></A>
+            [<A href="https://github.com/blackfeather-wang/Dynamic-Vision-Transformer" target="_blank">code</A>]
+                <BR>Yulin Wang*, Rui Huang*, Shiji Song, Zeyi Huang, <b>Gao Huang</b>.
+                      <BR><I>arXiv Preprint, 2021.<br></I>
+            <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_adafocus.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2105.03245"><B>
+            Adaptive Focus for Efficient Video Recognition.</B></A>
+            [<A href="https://github.com/blackfeather-wang/AdaFocus" target="_blank">code</A>]
+                <BR>Yulin Wang*, Zhaoxi Chen*, Haojun Jiang, Shiji Song, Yizeng Han, <b>Gao Huang</b>.
+                    <BR><I> International Conference on Computer Vision (<b>ICCV</b> <b style="color:#FF0011" ;="">Oral</b>) 2021. <BR> </I>
+            <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_frequency.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2011.13611"><B>
+            Frequency Domain Image Translation: More Photo-realistic, Better Identity-preserving.</B></A>
+                <BR>Mu Cai, Hong Zhang, Huijuan Huang, Qichuan Geng, <b>Gao Huang</b>.
+                    <BR><I> International Conference on Computer Vision (<b>ICCV</b>) 2021. <BR> </I>
+            <BR></DIV></DIV>
 
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_pami_GDCAN.png">
@@ -584,7 +608,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/isda_pami_2021.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2007.10538"><B>Regularizing Deep Networks with Semantic Data Augmentation.</B></A>
             [<A href="https://github.com/blackfeather-wang/ISDA-for-Deep-Networks"    target="_blank">code</A>]
-                <BR>Yulin Wang, <b>Gao Huang</b>, Shiji Song, Xuran Pan, Yitong Xia, Cheng Wu.
+                <BR>Yulin Wang*, <b>Gao Huang</b>*, Shiji Song, Xuran Pan, Yitong Xia, Cheng Wu.
                       <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
         <BR></DIV></DIV>
 
@@ -617,7 +641,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2003.07326"><B>Resolution Adaptive Networks for Efficient Inference.</B></A> 
             [<A href="https://github.com/yangle15/RANet-pytorch"    target="_blank">code</A>]                    
                 <BR>Le Yang*, Yizeng Han*, Xi Chen*, Shiji Song, Jifeng Dai, <b>Gao Huang</b>.               
-                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR </b>) 2020.<br></I>
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2020.<br></I>
         <BR></DIV></DIV>
         
             <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/partial_transfer_pami_2019.png">                  
@@ -633,7 +657,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 <DIV class="media-body "><A class="paper-title" href="http://www.gaohuang.net/papers/DenseNet_Journal.pdf"><B>Convolutional Networks with Dense Connectivity.</B></A> 
     [<A href="https://github.com/liuzhuang13/DenseNet" target="_blank">code</A>]                   
         <BR><b>Gao Huang</b>, Zhuang Liu, Geoff Pleiss, Laurens Van Der Maaten, Kilian Q. Weingerger.               
-             <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b> ) 2019.<br><P style="color: red; display: inline;">(Journal version of DenseNet; Deep understanding of dense connectivity.)</P></I>
+             <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>) 2019.<br><P style="color: red; display: inline;">(Journal version of DenseNet; Deep understanding of dense connectivity.)</P></I>
 <BR></DIV></DIV>
 
 
@@ -741,7 +765,7 @@ Qiantong Xu, <b>Gao Huang</b>, Yang Yuan, Chuan Guo, Yu Sun, Felix Wu, Kilian We
      [<A href="https://www.youtube.com/watch?v=NHajBzgnC1Q&amp;t=87m50s"     target="_blank">talk</A>]
     <BR>
 <b>Gao Huang*</b>, Shichen Liu*, Laurens van der Maaten, Kilian Q. Weinberger.<BR>
-    <I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR Spotlight)</b> 2018.</I><BR><I>
+    <I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR Spotlight</b>) 2018.</I><BR><I>
 <!-- <P style="color: red; display: inline;">(MedIA-MICCAI'17 Best Paper 
 Award)</P> --></I><BR></DIV></DIV>
 
@@ -755,7 +779,7 @@ Award)</P> --></I><BR></DIV></DIV>
     [<A href="https://github.com/mileyan/DARENet"    target="_blank">code</A>]
     <BR>
 Yan Wang*, Lequn Wang*, Yurong You*, Xu Zou, Vincent Chen, Serena Li, <b>Gao Huang</b>, Bharath Hariharan, Kilian Weinberger.<BR>
-	<I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR)</b> 2018. 
+	<I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2018.
 </I><BR><I>
 <!-- <P style="color: red; display: inline;">(ESI Highly Cited 
 Paper)</P> --></I><BR></DIV></DIV>
@@ -798,7 +822,7 @@ Learning Efficient Convolutional Networks through Network Slimming.
 </B></A>                             
 [<A href="https://github.com/liuzhuang13/slimming" target="_blank">code</A>]
 <BR>Zhuang Liu, Jianguo Li, Zhiqiang Shen, <b>Gao Huang</b>, Shoumeng Yan, Changshui Zhang. <BR>
-<I>International Conference on Computer Vision (<b>ICCV)</b> 2017. </I><BR><I>
+<I>International Conference on Computer Vision (<b>ICCV</b>) 2017. </I><BR><I>
 <!-- <P style="color: red; display: inline;">(Young Scientist Award 
 Finalist)</P> --></I><BR></DIV></DIV>
 
@@ -829,7 +853,7 @@ Snapshot Ensembles: Train 1, Get M for Free.</B></A>
 [<A href="https://github.com/gaohuang/SnapshotEnsemble" 
 target="blank">code</A>] 
                            <BR> <b>Gao Huang*</b>, Yixuan Li*, Geoff Pleiss, Zhuang Liu, John E. Hopcroft, Kilian Weinberger. 
-						   <BR><I>International Conference on Learning Representations (<b>ICLR)</b> 2017.                                
+						   <BR><I>International Conference on Learning Representations (<b>ICLR</b>) 2017.
 <!-- <P style="color: red; display: inline;">(Oral)</P> --></I><BR></DIV></DIV>
 
 
@@ -908,14 +932,14 @@ target="blank">talk</A>]
   <li> <p><b>Co-supervised PhD students</b>: <BR> 
     <a >Hui Wu</a> (2014-2020; Tencent)  <BR>
     <a >Yiming Chen</a> (2015-2020; MeiTuan)  <BR>
-     <a>Le Yang</a> (2015-2021; Xi'an Jiaotong University)  <BR>
+     <a href="https://www.yangle.cc/">Le Yang</a> (2015-2021; Xi'an Jiaotong University)  <BR>
      <a>Wenjie Shi</a> (2016-)  <BR>
      <a>Hangkai Hu</a> (2016-)  <BR>
      <a>Peng Jiang</a> (2017-)  <BR>
-     <a>Yizeng Han</a> (2018-)  <BR>
-     <a>Xuran Pan</a> (2018-)  <BR>
-     <a>Chaofei Wang</a> (2019-)  <BR>
-     <a>Yulin Wang</a> (2019-)  <BR>
+     <a href="https://yizenghan.top/">Yizeng Han</a> (2018-)  <BR>
+     <a href="https://panxuran.github.io/">Xuran Pan</a> (2018-)  <BR>
+     <a>Chaofei Wang</a> (2018-)  <BR>
+     <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
      Qisen Yang  (2019-)  </p></li>
 
   <li> <p><b>Undergraduate students at Cornell</b>: <BR> 
