--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_frequency.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2011.13611"><B>
             Frequency Domain Image Translation: More Photo-realistic, Better Identity-preserving.</B></A>
-                <BR>Mu Cai, Hong Zhang, Huijuan Huang, Qichuan Geng, <b>Gao Huang</b>.
+                <BR>Mu Cai, Hong Zhang, Huijuan Huang, Qichuan Geng, Yixuan Li, <b>Gao Huang</b>.
                     <BR><I> International Conference on Computer Vision (<b>ICCV</b>) 2021. <BR> </I>
             <BR></DIV></DIV>
 
