--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
 
            <h2>Bio</h2>
             <!-- <ul> -->
-            Gao Huang is an Assistant Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 25,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
+            Gao Huang is an Assistant Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 33,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
             <!-- </ul> -->
             <br>            <br>
 
@@ -518,12 +518,74 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 <BR>
     <!---->
 
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_acmix.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2111.14556.pdf"><B>
+            On the Integration of Self-Attention and Convolution.</B></A>
+             [<A href="https://github.com/LeapLabTHU/ACmix"    target="_blank">code</A>]
+                <BR>Xuran Pan, Chunjiang Ge, Rui Lu, Shiji Song, Guanfu Chen, Zeyi Huang, <b>Gao Huang</b>.
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_UniGrad.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2112.05141.pdf"><B>
+            Exploring the Equivalence of Siamese Self-Supervised Learning via A Unified Gradient Framework.</B></A>
+                <BR>Chenxin Tao*, Honghui Wang*, Xizhou Zhu, Jiahua Dong, Shiji Song, <b>Gao Huang</b>, Jifeng Dai.
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_adafocusv2.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2112.14238.pdf"><B>
+            AdaFocus V2: End-to-End Training of Spatial Dynamic Networks for Video Recognition.</B></A>
+             [<A href="https://github.com/LeapLabTHU/AdaFocusV2"    target="_blank">code</A>]
+                <BR>Yulin Wang*, Yang Yue*, Yuanze Lin, Haojun Jiang, Zihang Lai, Victor Kulikov, Nikita Orlov, Humphrey Shi, <b>Gao Huang</b>.
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_cvpr_dat.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2201.00520.pdf"><B>
+            Vision Transformer with Deformable Attention.</B></A>
+             [<A href="https://github.com/LeapLabTHU/DAT"    target="_blank">code</A>]
+                <BR>Zhuofan Xia*, Xuran Pan*, Shiji Song, Li Erran Li, <b>Gao Huang</b>.
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dynamic_survey.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.04906"><B>
+            Dynamic Neural Networks: A Survey.</B></A>
+                <BR>Yizeng Han*,<b>Gao Huang</b>*, Shiji Song, Le Yang, Honghui Wang, Yulin Wang.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_tpami_TSCI.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2112.03020.pdf"><B>
+            Temporal-Spatial Causal Interpretations for Vision-Based Reinforcement Learning.</B></A>
+                <BR>Wenjie Shi, <b>Gao Huang</b>, Shiji Song, Cheng Wu.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2021.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_aaai_gan.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2112.04163.pdf"><B>
+            Assessing a Single Image in Reference-Guided Image Synthesis.</B></A>
+                <BR>Jiayi Guo, Chaoqun Du, Jiangshan Wang, Huijuan Huang, Pengfei Wan, <b>Gao Huang</b>.
+                    <BR><I> AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2021. <BR> </I>
+            <BR></DIV></DIV>
+
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_nips_det.png">
+        <DIV class="media-body "><A class="paper-title" href="https://proceedings.neurips.cc/paper/2021/file/b9009beb804fa097c04d226a8ba5102e-Paper.pdf"><B>
+            Searching Parameterized AP Loss for Object Detection.</B></A>
+            [<A href="https://github.com/fundamentalvision/Parameterized-AP-Loss" target="_blank">code</A>]
+                <BR>Chenxin Tao*, Zizhang Li*, Xizhou Zhu*, <b>Gao Huang</b>, Yong Liu, Jifeng Dai.
+                      <BR><I>Neural Information Processing Systems (<b>NeurIPS</b>) 2021.<br></I>
+            <BR></DIV></DIV>
+
+
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dvt.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2105.15075"><B>
             Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length.</B></A>
             [<A href="https://github.com/blackfeather-wang/Dynamic-Vision-Transformer" target="_blank">code</A>]
                 <BR>Yulin Wang*, Rui Huang*, Shiji Song, Zeyi Huang, <b>Gao Huang</b>.
-                      <BR><I>arXiv Preprint, 2021.<br></I>
+                      <BR><I>Neural Information Processing Systems (<b>NeurIPS</b>) 2021.<br></I>
             <BR></DIV></DIV>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_adafocus.png">
@@ -533,6 +595,14 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
                 <BR>Yulin Wang*, Zhaoxi Chen*, Haojun Jiang, Shiji Song, Yizeng Han, <b>Gao Huang</b>.
                     <BR><I> International Conference on Computer Vision (<b>ICCV</b> <b style="color:#FF0011" ;="">Oral</b>) 2021. <BR> </I>
             <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_cam.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Wang_Towards_Learning_Spatially_Discriminative_Feature_Representations_ICCV_2021_paper.pdf"><B>
+            Towards Learning Spatially Discriminative Feature Representations.</B></A>
+                <BR>Chaofei Wang*, Jiayu Xiao*, Yizeng Han, Qisen Yang, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I> International Conference on Computer Vision (<b>ICCV</b>) 2021. <BR> </I>
+            <BR></DIV></DIV>
+
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_iccv_frequency.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2011.13611"><B>
@@ -555,14 +625,6 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
                 <BR>Yujing Wang*, Yaming Yang*, Jiangang Bai, Mingliang Zhang, Jing Bai, Jing Yu, Ce Zhang, <b>Gao Huang</b>, Yunhai Tong.
                       <BR><I>International Conference on Machine Learning (<b>ICML</b>) 2021.<br></I>
         <BR></DIV></DIV>
-
-    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dynamic_survey.png">                  
-        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2102.04906"><B>
-            Dynamic Neural Networks: A Survey.</B></A>
-                <BR>Yizeng Han*,<b>Gao Huang</b>*, Shiji Song, Le Yang, Honghui Wang, Yulin Wang.
-                      <BR><I>arXiv Preprint, 2021.<br></I>
-        <BR></DIV></DIV>
-
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_cvpr_pointformer.jpg">                  
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2012.11409"><B>
