--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2112.04163.pdf"><B>
             Assessing a Single Image in Reference-Guided Image Synthesis.</B></A>
                 <BR>Jiayi Guo, Chaoqun Du, Jiangshan Wang, Huijuan Huang, Pengfei Wan, <b>Gao Huang</b>.
-                    <BR><I> AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2021. <BR> </I>
+                    <BR><I> AAAI Conference on Artificial Intelligence (<b>AAAI</b> <b style="color:#FF0011" ;="">Oral</b>) 2021. <BR> </I>
             <BR></DIV></DIV>
 
 
