--- a/index.html
+++ b/index.html
@@ -481,8 +481,7 @@ p-id="1230" />                         <path fill="#555555" d="M 653.653 904.344
 p-id="1231" />             </svg>                         
 <!-- <FONT 
 color="red">Opening:</FONT> -->
-If you are interested in a position (PhD, postdoc or 
-intern) in my lab, please contact me via gaohuang at tsinghua dot edu dot cn.
+The positions for PhD and master students joining in the year 2023 in our lab are <B>already filled</B>. I appoligize that I may not respond to emails inquiring about PhD & Master positions.
 For international students, please check <a href="https://www.tsinghua.edu.cn/publish/thu2018en/newthuen_cnt/02-admissions-3.html">HERE</a> for available scholarships. For postdocs, please check <a href="https://postdoctor.tsinghua.edu.cn/info/zxtz/1777">HERE</a>.
 
 
