--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
 
            <h2>Bio</h2>
             <!-- <ul> -->
-            Gao Huang is an Assistant Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 33,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
+            Gao Huang is an Associate Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 40,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
             <!-- </ul> -->
             <br>            <br>
 
@@ -517,6 +517,35 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 <BR>
     <!---->
 
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_pami_gfnet.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2201.03014"><B>
+            Glance and Focus Networks for Dynamic Visual Recognition.</B></A>
+             [<A href="https://github.com/blackfeather-wang/GFNet-Pytorch"    target="_blank">code</A>]
+                <BR><b>Gao Huang</b>*, Yulin Wang*, Kangchen Lv, Haojun Jiang, Wenhui Huang, Pengfei Qi, Shiji Song.
+                      <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_eccv_adafocusV3.png">
+        <DIV class="media-body "><A class="paper-title" href="http://www.gaohuang.net/"><B>
+            AdaFocus V3: On Unified Spatial-temporal Dynamic Video Recognition.</B></A>
+                <BR>Yulin Wang*, Yang Yue*, Xinhong Xu, Ali Hassani, Victor Kulikov, Nikita Orlov, Shiji Song, Humphrey Shi, <b>Gao Huang</b>.
+                      <BR><I>European Conference on Computer Vision (<b>ECCV</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_eccv_meta_msd.png">
+        <DIV class="media-body "><A class="paper-title" href="http://www.gaohuang.net/"><B>
+            Learning to Weight Samples for Dynamic Early-exiting Networks.</B></A>
+                <BR>Yizeng Han*, Yifan Pu*, Zihang Lai, Chaofei Wang, Shiji Song, Junfeng Cao, Wenhui Huang, Chao Deng, <b>Gao Huang</b>.
+                      <BR><I>European Conference on Computer Vision (<b>ECCV</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_eccv_active_nerf.png">
+        <DIV class="media-body "><A class="paper-title" href="http://www.gaohuang.net/"><B>
+            ActiveNeRF: Learning where to See with Uncertainty Estimation.</B></A>
+                <BR>Xuran Pan, Zihang Lai, Shiji Song, <b>Gao Huang</b>.
+                      <BR><I>European Conference on Computer Vision (<b>ECCV</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_acmix.png">
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2111.14556.pdf"><B>
             On the Integration of Self-Attention and Convolution.</B></A>
@@ -545,7 +574,7 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
             Vision Transformer with Deformable Attention.</B></A>
              [<A href="https://github.com/LeapLabTHU/DAT"    target="_blank">code</A>]
                 <BR>Zhuofan Xia*, Xuran Pan*, Shiji Song, Li Erran Li, <b>Gao Huang</b>.
-                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
+                      <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR <b style="color:#FF0011" ;="">Best Paper Finalist</b></b>) 2022.<br></I>
         <BR></DIV></DIV>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2021_dynamic_survey.png">
@@ -901,7 +930,7 @@ Finalist)</P> --></I><BR></DIV></DIV>
 <b>Gao Huang*</b>, Zhuang Liu*, Laurens van der Maaten, Kilian Weinberger.                            
 <BR>
 <I>IEEE Conference on Computer Vision and Pattern Recognition
-  (<b>CVPR <b style="color:#FF0011" ;="">Oral</b></b>) 2017. <BR>
+  (<b>CVPR <b style="color:#FF0011" ;="">Best Paper</b></b>) 2017. <BR>
 </I><BR></DIV></DIV>
 
 
@@ -986,22 +1015,29 @@ target="blank">talk</A>]
 <li> <p><b>PhD Students</b>: <BR> 
     <a >Haojun Jiang (2020-)</a> <BR>
     <a>Chaoqun Du (2020-)</a> <BR>
-    <a>Rui Lu (Incoming)</a><BR>
-    <a>Qichen Zhao (Incoming)</a><BR>
+    <a>Rui Lu (2021-)</a><BR>
+    <a>Qichen Zhao (2021-)</a><BR>
+    <a>Yang Yue (2022-)</a><BR>
+    <a>Zanlin Ni (2022-)</a><BR>
 </p></li>
 
   <li> <p><b>Co-supervised PhD students</b>: <BR> 
     <a >Hui Wu</a> (2014-2020; Tencent)  <BR>
     <a >Yiming Chen</a> (2015-2020; MeiTuan)  <BR>
      <a href="https://www.yangle.cc/">Le Yang</a> (2015-2021; Xi'an Jiaotong University)  <BR>
-     <a>Wenjie Shi</a> (2016-)  <BR>
-     <a>Hangkai Hu</a> (2016-)  <BR>
+     <a>Wenjie Shi</a> (2016-2022)  <BR>
+     <a>Hangkai Hu</a> (2016-2022)  <BR>
      <a>Peng Jiang</a> (2017-)  <BR>
      <a href="https://yizenghan.top/">Yizeng Han</a> (2018-)  <BR>
      <a href="https://panxuran.github.io/">Xuran Pan</a> (2018-)  <BR>
      <a>Chaofei Wang</a> (2018-)  <BR>
      <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
-     Qisen Yang  (2019-)  </p></li>
+     Qisen Yang  (2019-) <BR>
+     Jiayi Guo  (2020-) <BR>
+     Chunjiang Ge  (2020-) <BR>
+     Rui Huang  (2020-) <BR>
+     Zhuofan Xia (2020-) <BR>
+     Yang Yue (2022-) </p></li>
 
   <li> <p><b>Undergraduate students at Cornell</b>: <BR> 
      Yu Sun (2015-2016; now PhD student at Berkeley) <BR>
@@ -1020,7 +1056,6 @@ target="blank">talk</A>]
 
 <li> <p><b>Undergraduate students at Tsinghua</b>: <BR> 
     <a >Hao Li</a> (2018-)  <BR>
-        <a>Jiayi Guo</a> (2018-)  <BR>
         <a>Zhuoyuan Wang</a> (2019-)  <BR>
         <a>Kaiqian Han</a> (2019-)  <BR>
         <a>Kuan Wang</a> (2019-)  <BR>
